# Streamosos

./: .gitignore  LICENSE  README.md  __init__.py  activate.bat  bootstrap.ps1  downloader.py  processor.py  pyproject.toml  requirements.txt  setup.bat  setup.ps1  setup.sh  streamosos.bat  streamosos.sh
.github/workflows/: ci.yml
mtslinker/: cli.py  utils.py  webinar.py
streamosos/: __init__.py  __main__.py  cli.py  parsing.py  processor.py  utils.py  webinar.py
tests/: test_downloader.py  test_parsing.py
